charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kakao-paysec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kakao-paysec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kakao-paysec-api
                port:
                  number: 8080
